--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -18,8 +18,8 @@ jobs:
             key: ${{ secrets.SSH_PRIVATE_KEY }}
             script: |
                 curl -LO https://deployer.org/deployer.phar
-                mv deployer.phar /usr/local/bin/dep
-                chmod +x /usr/local/bin/dep
+                sudo mv deployer.phar /usr/local/bin/dep
+                sudo chmod +x /usr/local/bin/dep
                     
 
       - name: Deploy app
