--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -21,15 +21,30 @@ jobs:
                 sudo mv deployer.phar /usr/local/bin/dep
                 sudo chmod +x /usr/local/bin/dep
                     
+      - name: SSH Agent
+        uses: webfactory/ssh-agent@v0.5.4
+        with:
+            ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Install SSH key of bastion
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          name: id_rsa-bastion
+          known_hosts: ${{ secrets.KNOWN_HOSTS_OF_BASTION }}
+          config: |
+            Host bastion
+              HostName ${{ secrets.SSH_HOST }}
+              User ubuntu
 
       - name: Deploy app
-        uses: appleboy/ssh-action@master
-        with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ubuntu
-            key: ${{ secrets.SSH_PRIVATE_KEY }}
-            script: |
-                git clone git@github.com:Anefu/php-todo.git
-                bash -s < ~/php-todo/serve.sh
+        run: |
+          cat << EOF >> ~/.ssh/config
+          Host target
+            HostName ${{ secrets.SSH_WEB }}
+            User ubuntu
+            ProxyCommand ssh -W %h:%p bastion
 
+      - name: SSH Action
+        run: ssh target 'hostname -i'
       
