--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -32,6 +32,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           name: id_rsa-bastion
           known_hosts: ${{ secrets.KNOWN_HOSTS_OF_BASTION }}
+          if_key_exists: ignore
           config: |
             Host bastion
               HostName ${{ secrets.SSH_HOST }}
@@ -43,15 +44,13 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           name: id_rsa-target
           known_hosts: ${{ secrets.KNOWN_HOSTS_OF_TARGET }}
+          if_key_exists: ignore
           config: |                                         
             Host target
               HostName ${{ secrets.SSH_WEB }}
               User ubuntu
               IdentityFile ~/.ssh/id_rsa-target
               ProxyCommand ssh -W %h:%p bastion
-
-      - name: SSH Action
-        run: ssh target 'hostname -i'
 
   deploy-production:
     name: Deploy Project
